k8s-projet/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  # 🚀 NOUVEAU : Stratégie Recreate pour éviter le verrouillage du volume entre deux nœuds
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        resources:
          requests:
            memory: "256Mi"   # Minimum garanti pour que MySQL s'allume
            cpu: "100m"
          limits:
            memory: "1Gi"     # On le laisse monter jusqu'à 1 Go maximum
            cpu: "500m"       # Limite la consommation du processeur
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysql-initdb
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
      - name: mysql-initdb
        configMap:
          name: mysql-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
